Add links to Quarto document and change style.

--- a/qmd/git-backed-posit-connect.qmd
+++ b/qmd/git-backed-posit-connect.qmd
@@ -3,6 +3,10 @@ title: "Git-Backed Content on Posit Connect Servers"
 editor: visual
 format: 
     html:
+        grid: 
+          body-width: 1000px
+          sidebar-width: 200px
+          margin-width: 200px
         toc: true
         toc-depth: 2
         code-fold: show
@@ -10,13 +14,25 @@ format:
         theme: 
           light: flatly
           dark: darkly
+        number-sections: false
 ---
 
 ## Overview
 
-This document describes how to deploy a Shiny app on Posit Connect, leveraging the [pins](https://cran.r-project.org/web/packages/pins/index.html) package to manage data. The application showcases single-cell RNA sequencing data analysis using the [scRNAseq](https://www.bioconductor.org/packages/release/data/experiment/html/scRNAseq.html) package to fetch data, perform quality control, normalization, and dimensionality reduction, displaying results with a Shiny interface.
+This tutorial demonstrates how to deploy a Shiny app on Posit Connect, leveraging the [pins](https://cran.r-project.org/web/packages/pins/index.html) package to manage data. The application showcases single-cell RNA sequencing data analysis using the [scRNAseq](https://www.bioconductor.org/packages/release/data/experiment/html/scRNAseq.html) package to fetch data, perform quality control, normalization, and dimensionality reduction, displaying results with a Shiny interface.
 
-Note that you may find more information and details in the Posit Connect documentation [Git-Backed Content section](https://docs.posit.co/connect/user/git-backed/).
+The code for this tutorial is contained in the this [GitHub respository](https://github.com/ccb-hms/Git-Backed-Content). The main elements of this tutorial are the following:
+
+- The analytics code to generate and save the data using `pins`, available in the [master branch](https://github.com/ccb-hms/Git-Backed-Content) of the GitHub repository.
+- The Quarto code to generate this document (which is also deployed on the same Posit Connect server as the Shiny app), available in the [Quarto branch](https://github.com/ccb-hms/Git-Backed-Content/tree/Quarto) of the GitHub repository.
+- The code to generate the Shiny app, available in the [Shiny branch](https://github.com/ccb-hms/Git-Backed-Content/tree/Shiny) of the GitHub repository.
+
+The resulting output of this repository are:
+
+1. [This Quarto document](https://ccb.connect.hms.harvard.edu/Git-Backed-Content-Tutorial/).
+2. [The Shiny app](https://ccb.connect.hms.harvard.edu/Git-Backed-Content-Shiny-App/) to visualize the single-cell RNA-seq data in reduced dimensions.
+
+Note: you may find more information and details in the Posit Connect documentation [Git-Backed Content section](https://docs.posit.co/connect/user/git-backed/).
 
 ## Step 1: Data Preparation
 
@@ -24,11 +40,13 @@ As a best practice, it's advised to separate the analytics code and the Shiny ap
 
 For organizational clarity and efficiency:
 
--   **Separate Repositories**: Maintain distinct repositories for your analytics and Shiny applications.
+-   **Separate Repositories**: Maintain distinct repositories for your analytics and Quarto/Shiny applications.
 
 -   **Separate Branches**: Alternatively, use different branches within a single GitHub repository to isolate analytics from app development.
 
-To keep all the code in a single repository for the simplicity of this demonstration, the analytics code described below is located in the [R/](https://github.com/ccb-hms/Git-Backed-Content/tree/master/R) directory of the [GitHub repository for this tutorial](https://github.com/ccb-hms/Git-Backed-Content). In general, it is best to follow best practices to keep this code in a separate repository or branch as specified above.
+To keep all the code in a single repository for the simplicity of this demonstration, the we use separate branches for the analytics code to generate and save the data, the code to generate this app and the code to generate the Shiny app (as described in the Overview).
+
+The analytics code below is available in the [master branch](https://github.com/ccb-hms/Git-Backed-Content) of the GitHub repository.
 
 ```{r}
 #| echo: true
@@ -133,7 +151,7 @@ This Shiny app provides an interactive interface to visualize dimensionality red
 
 -   **Server Logic**: Processes user input and displays a plot where cell types are color-coded, facilitating exploration of cell heterogeneity.
 
-The code below reads the data pinned on the Posit Connect server and generates the Shiny app. This code is available in the [Shiny/](https://github.com/ccb-hms/Git-Backed-Content/tree/master/Shiny) folder of the [GitHub repository for this tutorial](https://github.com/ccb-hms/Git-Backed-Content).
+The code below reads the data pinned on the Posit Connect server and generates the Shiny app. This code is available in the [Shiny branch](https://github.com/ccb-hms/Git-Backed-Content/tree/Shiny) of the GitHub repository.
 
 ```{r}
 #| echo: true
